tests/errors/type_check/function/return_param_wrong_type.sim
fn f(x: i64, $return: i64) { entry: return }